# SynapseVisionLab

./: .gitignore  CMakeLists.txt  MainWindow.h  README.md  main.cpp  notes.txt
src/: main.cpp
src/DataModels/: EEGData.cpp  EEGData.h
src/FileHandlers/: EEGFileHandler.cpp  EEGFileHandler.h
src/MainWindow/: MainWindow.cpp  MainWindow.h
src/NotchPreviewDialog/: NotchPreviewDialog.cpp  NotchPreviewDialog.h
src/Utils/: SignalProcessor.h
src/Visualization/: EEGChartView.cpp  EEGChartView.h
